avoid overflow

--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -55,7 +55,6 @@
     border: 0;
     background: $black;
     color: $gray-500;
-    margin-top: 0;
 
     .dropdown-header {
       padding: 0.5rem 1rem;
@@ -68,6 +67,7 @@
     display: flex;
     height: $height;
     align-items: center;
+    overflow: hidden;
 
     > * {
       margin-right: 15px;
